# tesseract-demo

./: .gitignore  README.md  dockerfile  main.py  ocr_utils.py  preprocess.py  pyproject.toml  readimagedata.py  receipt.heic
